# harlequin

./: .gitignore  ARCHITECTURE.md  README.md  VALIDATION-LEDGER.md
chain/: Cargo.toml  PALLET-DESIGN.md  README.md
chain/composition/: Cargo.toml
chain/composition/src/: lib.rs  main.rs
chain/consensus-api/: Cargo.toml
chain/consensus-api/src/: lib.rs
chain/consensus-core/: Cargo.toml
chain/consensus-core/src/: beacon.rs  finality.rs  lib.rs  sha256.rs  sim.rs  snowball.rs  sortition_fp.rs  vrf.rs
chain/content-id/: Cargo.toml
chain/content-id/src/: lib.rs
chain/forum-core/: Cargo.toml
chain/forum-core/src/: lib.rs
chain/manifesto-core/: Cargo.toml
chain/manifesto-core/src/: lib.rs
chain/node/: Cargo.toml  build-node.sh
chain/node/src/: chain_spec.rs  cli.rs  command.rs  finality.rs  main.rs  participation_inherent.rs  rpc.rs  service.rs
chain/node/tools/devnet-driver/: Cargo.toml
chain/node/tools/devnet-driver/src/: main.rs
chain/node/tools/hlq-sigverify/: Cargo.toml
chain/node/tools/hlq-sigverify/src/: main.rs
chain/pallet-beacon/: Cargo.toml
chain/pallet-beacon/src/: lib.rs
chain/pallet-directory/: Cargo.toml
chain/pallet-directory/src/: lib.rs
chain/pallet-forum/: Cargo.toml
chain/pallet-forum/src/: lib.rs
chain/pallet-justice/: Cargo.toml
chain/pallet-justice/src/: lib.rs
chain/pallet-manifesto/: Cargo.toml
chain/pallet-manifesto/src/: lib.rs
chain/pallet-market/: Cargo.toml
chain/pallet-market/src/: lib.rs
chain/pallet-multisig-upgrade/: Cargo.toml
chain/pallet-multisig-upgrade/src/: lib.rs
chain/pallet-news/: Cargo.toml
chain/pallet-news/src/: lib.rs
chain/pallet-participation/: Cargo.toml
chain/pallet-participation/src/: lib.rs
chain/pallet-reputation/: Cargo.toml
chain/pallet-reputation/src/: lib.rs
chain/pallet-tokens/: Cargo.toml
chain/pallet-tokens/src/: lib.rs
chain/protocol-core/: Cargo.toml
chain/protocol-core/examples/: epochs.rs
chain/protocol-core/src/: lib.rs
chain/reputation-api/: Cargo.toml
chain/reputation-api/src/: lib.rs
chain/reputation-core/: Cargo.toml
chain/reputation-core/src/: lib.rs  vouch.rs
chain/runtime/: Cargo.toml  build.rs
chain/runtime/src/: check_nonce.rs  lib.rs
chain/sim-cluster-599/: Cargo.toml  SIM-599-RESULTS.md
chain/sim-cluster-599/src/: main.rs
chain/sphinx-core/: Cargo.toml
chain/sphinx-core/src/: call.rs  crypto.rs  lib.rs  packet.rs  relay.rs  route.rs  session.rs  sphinx.rs  surb.rs
chain/tokens-api/: Cargo.toml
chain/tokens-api/src/: lib.rs
chain/tokens-core/: Cargo.toml
chain/tokens-core/src/: lib.rs
chain/validation-evidence/: README.md  validate_decay.py  validate_epoch19.py  validate_justice.py
consensus-simulator/: ANALYSIS-safety-liveness.md  PARAMETERS.md  README.md  RESULTADOS-consenso.md  RESULTS-testrig.md  RESULTS.md  particion.py  partition.py  run_consenso.py  run_consensus.py
consensus-simulator/testrig/: README.md  __init__.py  engine.py  network.py  run_testrig.py  scenarios.py  vrf.py
consensus-simulator/testrig/tests/: test_testrig.py
consensus-simulator/tests/: test_consenso.py  test_consensus.py
consensus-simulator/wtc_sim/: __init__.py  consenso.py  consensus.py  poblacion.py  population.py
docs/: consenso-confianza-tejida.md  woven-trust-consensus.md
node-dist/: Dockerfile  README.md  docker-compose.yml  hlq-stats.py  install-harlequin-node.sh
reputation-engine/: PARAMETERS.md  README.md  RESULTADOS.md  RESULTS.md  adaptativo.py  adaptive.py  aristas.py  edge_aging.py  escenarios.py  graduacion.py  graduation.py  run_all.py  scenarios.py  temporal.py
reputation-engine/harlequin_rep/: __init__.py  consenso.py  consensus.py  graph.py  model.py  reputacion.py  reputation.py  vouch.py
reputation-engine/tests/: test_engine.py  test_motor.py
