[workspace]
resolver = "2"
members = ["reputation-core", "consensus-core", "protocol-core", "composition"]
# pallet-reputation is its OWN workspace: the FRAME dependency tree (hundreds of crates) stays out of
# these lean, dependency-free cores. Build it from its own directory.
exclude = ["pallet-reputation", "runtime"]
