[package]
name = "harlequin-node"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"
description = "Harlequin node — the service that runs the chain (network, block authoring, RPC). Sovereign chain."

[dependencies]
harlequin-runtime = { path = "../runtime", features = ["std"] }
# Woven-Trust consensus core (dep-free, validated): reputation-weighted sortition gates block authoring.
consensus-core = { path = "../consensus-core" }
# Runtime API to read on-chain consensus reputation (drives the sortition off real chain state).
harlequin-consensus-api = { path = "../consensus-api" }
# polkadot-sdk umbrella pinned to 2604.2.0 = frame 0.17.0 / sp-api 42 (CONFIRMED match with the runtime).
# Pinning the umbrella keeps all sc-*/sp-* internally consistent (the unversioned-sc-* route picks ancient
# crates and breaks). Only the `node` (client) feature — `experimental` added nothing we use (lock unchanged).
# AUDIT NOTE 2026-06-17: the `node` feature is a kitchen-sink — it pulls pallet-revive (EVM) + parachain/
# bridge TEST utilities (→ ~20 alloy/Ethereum crates we don't use). Tightening this = moving off the umbrella
# to individual sc-* crates (the version-pinning headache); deferred to a pre-mainnet dep-slimming pass.
polkadot-sdk = { version = "2604.2.0", features = ["node"] }
clap = { version = "4", features = ["derive"] }
futures = "0.3"
futures-timer = "3"
log = "0.4"
# async-trait: the polkadot-sdk `BlockImport`/`JustificationImport`/`Verifier` traits are `#[async_trait]`;
# the umbrella does not re-export the macro, so depend on it directly (unversioned → unifies to the lock).
async-trait = "*"
jsonrpsee = { version = "0.24", features = ["server"] }
serde_json = "1"
# sp-* primitives the node glue uses directly (the polkadot-sdk umbrella does not re-export these at its
# top level). Unversioned → cargo unifies them to the umbrella's already-locked versions.
sp-runtime = "*"
sp-core = "*"
sp-io = "*"
sp-timestamp = "*"
sp-api = "*"
sp-block-builder = "*"
sp-genesis-builder = "*"

[features]
default = ["std"]
std = ["harlequin-runtime/std", "polkadot-sdk/std"]
# Production consensus/reputation cadence (#30) across node + runtime. Build the mainnet binary with
# `cargo build --release --features mainnet`; the default build keeps fast testnet values for validation.
mainnet = ["harlequin-runtime/mainnet"]

[workspace]

# core2 0.4.0 (needed transitively by multihash 0.17 → litep2p → sc-network) was YANKED from crates.io
# (the author yanked the whole crate), so a fresh resolve fails. The source still exists on git; patch to it.
# Authorised by Chief (2026-06-16). Pinned to an immutable rev for reproducibility (set after first resolve).
[patch.crates-io]
# rev 545e84b = "Bump version to 0.4.0" (the next commit deprecated/gutted the crate). Immutable pin =
# the exact 0.4.0 source, reproducible. Widely-used crate (46M downloads), yanked wholesale by the author.
core2 = { git = "https://github.com/bbqsrc/core2", rev = "545e84b" }
