[package]
name = "pallet-multisig-upgrade"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"
description = "Harlequin multisig-upgrade pallet — the bridge governance v1 lacked (SPEC-RELAUNCH §3): a founders' 3-of-5 key for set_code ONLY, with a HARD on-chain expiry that burns itself, geometric-decay renewal ratified by the network, a disaster path that still converges, seat cession to reputable members, and FLAG-1 invariant validation on every candidate upgrade. Nobody is crowned: the key can only shrink."

[dependencies]
codec = { version = "3.7.5", package = "parity-scale-codec", default-features = false, features = ["derive"] }
frame = { version = "0.17.0", package = "polkadot-sdk-frame", default-features = false, features = ["runtime"] }
scale-info = { version = "2.11.6", default-features = false, features = ["derive"] }
serde = { version = "1", default-features = false, features = ["derive"] }

[features]
default = ["std"]
std = ["codec/std", "frame/std", "scale-info/std", "serde/std"]

# Own workspace so the heavy FRAME dependency tree stays out of the lean core workspace (`../Cargo.toml`).
[workspace]
