[package]
name = "pallet-tokens"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"
description = "Harlequin tokens pallet — two coins (HLQ, SOV), thin FRAME wrapper over the validated tokens-core. Checked transfers, pre-committed disinflationary emission (no discretionary mint), fee burn, and proof-of-service node rewards. Invariant: money ≠ power (Art. VI). SPEC §3."

[dependencies]
codec = { version = "3.7.5", package = "parity-scale-codec", default-features = false, features = ["derive"] }
frame = { version = "0.17.0", package = "polkadot-sdk-frame", default-features = false, features = ["runtime"] }
tokens-core = { path = "../tokens-core", default-features = false }
scale-info = { version = "2.11.6", default-features = false, features = ["derive"] }
serde = { version = "1", default-features = false, features = ["derive"] }

[features]
default = ["std"]
std = ["codec/std", "frame/std", "tokens-core/std", "scale-info/std", "serde/std"]

# Own workspace so the heavy FRAME dependency tree stays out of the lean core workspace (`../Cargo.toml`).
[workspace]
