[package]
name = "reputation-core"
version = "0.1.0"
edition = "2021"
description = "Harlequin reputation engine — Rust port of the validated prototype (prototipos/reputacion). Foundation of the Substrate reputation pallet."
license = "AGPL-3.0-or-later"

[dependencies]

[features]
# `std` (default) pulls in the f64 oracle/prototype path + vouch scoring (uses libm: log2/floor/round/abs).
# Without it the crate is `no_std` (alloc only): the deterministic fixed-point reputation path + the vouch
# registry storage — exactly what the Substrate runtime/pallet links against (`default-features = false`).
default = ["std"]
std = []

[lib]
name = "reputation_core"
path = "src/lib.rs"
