[package]
name = "harlequin-runtime"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"
description = "Harlequin solochain runtime — frame_system + the reputation pallet, the runtime a node executes. Sovereign chain, Woven-Trust consensus (committee by reputation)."

[dependencies]
codec = { version = "3.7.5", package = "parity-scale-codec", default-features = false, features = ["derive"] }
scale-info = { version = "2.11.6", default-features = false, features = ["derive"] }
frame = { version = "0.17.0", package = "polkadot-sdk-frame", default-features = false, features = ["runtime"] }
pallet-reputation = { path = "../pallet-reputation", default-features = false }
pallet-manifesto = { path = "../pallet-manifesto", default-features = false }
harlequin-consensus-api = { path = "../consensus-api", default-features = false }
pallet-timestamp = { version = "47.0.0", default-features = false }
pallet-balances = { version = "49.0.0", default-features = false }
pallet-sudo = { version = "48.0.0", default-features = false }
pallet-transaction-payment = { version = "48.0.0", default-features = false }
pallet-transaction-payment-rpc-runtime-api = { version = "48.0.0", default-features = false }
frame-system = { version = "47.0.0", default-features = false }

[features]
default = ["std"]
std = [
	"codec/std", "scale-info/std", "frame/std", "frame-system/std", "pallet-reputation/std",
	"pallet-manifesto/std", "harlequin-consensus-api/std",
	"pallet-timestamp/std", "pallet-balances/std", "pallet-sudo/std",
	"pallet-transaction-payment/std", "pallet-transaction-payment-rpc-runtime-api/std",
	"substrate-wasm-builder",
]

# Own workspace — the runtime/node dependency tree stays out of the lean cores.
[workspace]

[build-dependencies]
# Only needed for the std build, which packages the runtime into the wasm blob a node executes.
substrate-wasm-builder = { version = "33.0.0", optional = true }
